--- a/Insanity/View/WorkoutCell.xib
+++ b/Insanity/View/WorkoutCell.xib
@@ -9,56 +9,68 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="workoutMoveCell" rowHeight="59" id="KGk-i7-Jjw" customClass="WorkoutCell" customModule="Insanity" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="59"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="workoutMoveCell" rowHeight="86" id="KGk-i7-Jjw" customClass="WorkoutCell" customModule="Insanity" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="376" height="86"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="59"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="376" height="86"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xc1-3c-it5">
-                        <rect key="frame" x="10" y="5" width="300" height="50"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cX0-ps-6we">
+                        <rect key="frame" x="0.0" y="5" width="376" height="70"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Power Jack" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yBH-w8-A8W">
-                                <rect key="frame" x="0.0" y="0.0" width="120" height="50"/>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="43" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6vm-50-o3n">
-                                <rect key="frame" x="120" y="0.0" width="60" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="CdF-Oz-iGp"/>
-                                    <constraint firstAttribute="width" constant="60" id="XG5-fS-r2P"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="18"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="55" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J9w-1h-QL4">
-                                <rect key="frame" x="180" y="0.0" width="60" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="60" id="0PR-fJ-fAw"/>
-                                    <constraint firstAttribute="height" constant="50" id="9ly-7M-SYe"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="18"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+2%" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kjN-g4-dVd">
-                                <rect key="frame" x="240" y="0.0" width="60" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="SBg-hX-eXa"/>
-                                    <constraint firstAttribute="width" constant="60" id="Sy9-4V-rXF"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="18"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xc1-3c-it5">
+                                <rect key="frame" x="10" y="10" width="356" height="50"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Power Jack" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yBH-w8-A8W">
+                                        <rect key="frame" x="0.0" y="0.0" width="176" height="50"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="43" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6vm-50-o3n">
+                                        <rect key="frame" x="176" y="0.0" width="60" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="CdF-Oz-iGp"/>
+                                            <constraint firstAttribute="width" constant="60" id="XG5-fS-r2P"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="black" pointSize="18"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="55" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J9w-1h-QL4">
+                                        <rect key="frame" x="236" y="0.0" width="60" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="60" id="0PR-fJ-fAw"/>
+                                            <constraint firstAttribute="height" constant="50" id="9ly-7M-SYe"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="black" pointSize="18"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+2%" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kjN-g4-dVd">
+                                        <rect key="frame" x="296" y="0.0" width="60" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="SBg-hX-eXa"/>
+                                            <constraint firstAttribute="width" constant="60" id="Sy9-4V-rXF"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="black" pointSize="18"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                         </subviews>
-                    </stackView>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="70" id="Dc2-86-zF8"/>
+                            <constraint firstItem="Xc1-3c-it5" firstAttribute="leading" secondItem="cX0-ps-6we" secondAttribute="leading" constant="10" id="Pls-AV-0c7"/>
+                            <constraint firstItem="Xc1-3c-it5" firstAttribute="centerY" secondItem="cX0-ps-6we" secondAttribute="centerY" id="Q4V-Ho-jZr"/>
+                            <constraint firstAttribute="trailing" secondItem="Xc1-3c-it5" secondAttribute="trailing" constant="10" id="mku-an-l2u"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Xc1-3c-it5" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="VeL-hX-EG9"/>
-                    <constraint firstAttribute="trailing" secondItem="Xc1-3c-it5" secondAttribute="trailing" constant="10" id="e4D-MU-PQe"/>
-                    <constraint firstItem="Xc1-3c-it5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="lgP-Gy-GHM"/>
-                    <constraint firstAttribute="bottom" secondItem="Xc1-3c-it5" secondAttribute="bottom" constant="5" id="sIE-hi-ylX"/>
+                    <constraint firstAttribute="bottom" secondItem="cX0-ps-6we" secondAttribute="bottom" constant="5" id="0fh-hu-Seg"/>
+                    <constraint firstAttribute="trailing" secondItem="cX0-ps-6we" secondAttribute="trailing" id="rJr-cT-9Eh"/>
+                    <constraint firstItem="cX0-ps-6we" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="xqB-Gg-eQm"/>
+                    <constraint firstItem="cX0-ps-6we" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="yND-g9-W5M"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -69,7 +81,7 @@
                 <outlet property="percentLabel" destination="kjN-g4-dVd" id="uAT-Pw-9rV"/>
                 <outlet property="workoutMoveLabel" destination="yBH-w8-A8W" id="NXK-63-1DB"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="121.54017857142857"/>
+            <point key="canvasLocation" x="149.27536231884059" y="117.85714285714285"/>
         </tableViewCell>
     </objects>
 </document>
