--- a/Insanity/View/WorkoutCell.xib
+++ b/Insanity/View/WorkoutCell.xib
@@ -9,49 +9,67 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="workoutMoveCell" rowHeight="101" id="KGk-i7-Jjw" customClass="WorkoutCell" customModule="Insanity" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="422" height="101"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="workoutMoveCell" rowHeight="86" id="KGk-i7-Jjw" customClass="WorkoutCell" customModule="Insanity" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="473" height="86"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="422" height="101"/>
+                <rect key="frame" x="0.0" y="0.0" width="473" height="86"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cX0-ps-6we">
-                        <rect key="frame" x="0.0" y="5" width="422" height="70"/>
+                        <rect key="frame" x="0.0" y="5" width="473" height="70"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xc1-3c-it5">
-                                <rect key="frame" x="10" y="10" width="402" height="50"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="Xc1-3c-it5">
+                                <rect key="frame" x="10" y="25" width="453" height="20.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Power Jack" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yBH-w8-A8W">
-                                        <rect key="frame" x="0.0" y="0.0" width="222" height="50"/>
-                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="178" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="43" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6vm-50-o3n">
-                                        <rect key="frame" x="222" y="0.0" width="60" height="50"/>
+                                        <rect key="frame" x="178" y="0.0" width="55" height="20.5"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="50" id="CdF-Oz-iGp"/>
-                                            <constraint firstAttribute="width" constant="60" id="XG5-fS-r2P"/>
+                                            <constraint firstAttribute="width" constant="55" id="XG5-fS-r2P"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" weight="black" pointSize="18"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="55" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J9w-1h-QL4">
-                                        <rect key="frame" x="282" y="0.0" width="60" height="50"/>
+                                        <rect key="frame" x="233" y="0.0" width="55" height="20.5"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="60" id="0PR-fJ-fAw"/>
-                                            <constraint firstAttribute="height" constant="50" id="9ly-7M-SYe"/>
+                                            <constraint firstAttribute="width" constant="55" id="0PR-fJ-fAw"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" weight="black" pointSize="18"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="+2%" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kjN-g4-dVd">
-                                        <rect key="frame" x="342" y="0.0" width="60" height="50"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="35" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NTE-jc-brt">
+                                        <rect key="frame" x="288" y="0.0" width="55" height="20.5"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="50" id="SBg-hX-eXa"/>
-                                            <constraint firstAttribute="width" constant="60" id="Sy9-4V-rXF"/>
+                                            <constraint firstAttribute="width" constant="55" id="pbo-XN-P53"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" weight="black" pointSize="18"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="61" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d9h-UG-zEA">
+                                        <rect key="frame" x="343" y="0.0" width="55" height="20.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="55" id="5uA-yb-dno"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="40" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kjN-g4-dVd">
+                                        <rect key="frame" x="398" y="0.0" width="55" height="20.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="55" id="Sy9-4V-rXF"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
@@ -76,12 +94,14 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="newDataLabel" destination="J9w-1h-QL4" id="Jbf-bG-n9U"/>
-                <outlet property="oldDataLabel" destination="6vm-50-o3n" id="1pw-CR-czI"/>
-                <outlet property="percentLabel" destination="kjN-g4-dVd" id="uAT-Pw-9rV"/>
+                <outlet property="test1Label" destination="6vm-50-o3n" id="1pw-CR-czI"/>
+                <outlet property="test2Label" destination="J9w-1h-QL4" id="Jbf-bG-n9U"/>
+                <outlet property="test3Label" destination="NTE-jc-brt" id="o0c-o3-9bT"/>
+                <outlet property="test4Label" destination="d9h-UG-zEA" id="llK-mL-JUn"/>
+                <outlet property="test5Label" destination="kjN-g4-dVd" id="uAT-Pw-9rV"/>
                 <outlet property="workoutMoveLabel" destination="yBH-w8-A8W" id="NXK-63-1DB"/>
             </connections>
-            <point key="canvasLocation" x="159.42028985507247" y="112.83482142857142"/>
+            <point key="canvasLocation" x="196.37681159420291" y="117.85714285714285"/>
         </tableViewCell>
     </objects>
 </document>
