--- a/Insanity/View/AddFriendCell.xib
+++ b/Insanity/View/AddFriendCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="reuseAddFriend" rowHeight="123" id="KGk-i7-Jjw" customClass="AddFriendCell" customModule="Insanity" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="reuseAddFriend" rowHeight="123" id="KGk-i7-Jjw" customClass="AddFriendCell" customModule="Insanity" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="326" height="123"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -30,23 +30,24 @@
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Marc-Antoine" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gSU-Ll-dS2">
-                                        <rect key="frame" x="60" y="32.5" width="166" height="18"/>
+                                        <rect key="frame" x="60" y="32.5" width="156" height="18"/>
                                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s0o-Rf-PiO">
-                                        <rect key="frame" x="236" y="26.5" width="50" height="30"/>
+                                        <rect key="frame" x="226" y="27" width="60" height="29"/>
                                         <color key="backgroundColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="50" id="95Q-qr-dPm"/>
+                                            <constraint firstAttribute="width" constant="60" id="95Q-qr-dPm"/>
                                         </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <state key="normal" title="Add">
                                             <color key="titleColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         </state>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                <integer key="value" value="5"/>
+                                                <integer key="value" value="3"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                         <connections>
@@ -75,6 +76,7 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="addButton" destination="s0o-Rf-PiO" id="Mku-dc-oX1"/>
                 <outlet property="avatarImage" destination="Isg-Nv-Ica" id="1jE-2j-o9w"/>
                 <outlet property="pseudolabel" destination="gSU-Ll-dS2" id="bXD-Tx-oQG"/>
             </connections>
