--- a/Insanity/View/UserCell.xib
+++ b/Insanity/View/UserCell.xib
@@ -24,20 +24,20 @@
                         <rect key="frame" x="20" y="20" width="320" height="55"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar17" translatesAutoresizingMaskIntoConstraints="NO" id="fbd-ks-uab">
-                                <rect key="frame" x="0.0" y="0.0" width="55" height="55"/>
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="55"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="55" id="0kG-nq-t9c"/>
-                                    <constraint firstAttribute="width" constant="55" id="F0G-hb-Her"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="55" id="avD-WW-PeM"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="0kG-nq-t9c"/>
+                                    <constraint firstAttribute="width" constant="50" id="F0G-hb-Her"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="avD-WW-PeM"/>
                                     <constraint firstAttribute="height" constant="55" id="uQr-xN-tXY"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0eY-FN-lrw">
-                                <rect key="frame" x="71" y="0.0" width="249" height="55"/>
+                                <rect key="frame" x="66" y="0.0" width="254" height="55"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Malfouf, le nul" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hse-dZ-2mG">
-                                        <rect key="frame" x="10" y="15.5" width="137" height="24"/>
-                                        <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="20"/>
+                                        <rect key="frame" x="10" y="18.5" width="94" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
